# VQGAE

./: .gitignore  LICENSE  README.md  conda-lock.yml  pyproject.toml  vqgae_gpu.yml
VQGAE/: __init__.py  callbacks.py  cli.py  filters.py  inference.py  layers.py  metrics.py  models.py  preprocessing.py  utils.py
VQGAE/pipelines/: decode.py  encode.py  train.py
VQGAE/preprocessing/: __init__.py  chython.py  rdkit.py  shards.py  smi.py
configs/: ordering_network_training.yaml  vqgae_decode.yaml  vqgae_encode.yaml  vqgae_training.yaml
data/tubulin/: colchicine_scaffold.sdf
docs/: README.md  cli.md  fragment_inspection.md  latent_shapes.md  ordering_network.md  train_from_scratch.md  your_own_qsar.md
examples/: MODEL_CARD.md  run_tubulin_e2e.py
notebooks/: 01_quickstart.ipynb  02_inverse_qsar_tubulin.ipynb  03_bring_your_own_optimizer.ipynb  04_scaffold_constrained_generation.ipynb  05_train_your_own_qsar.ipynb  06_fragment_inspection.ipynb
tests/: test_api.py  test_integration.py
