[tool.poetry]
name = "vqgae"
version = "0.0.1"
description = "Official implementation of VQGAE architecture"
authors = ["Laboratoire de Chemoinformatique <tagirshin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "vqgae", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
cgrtools = ">=4.1.34"
py-mini-racer = ">=0.6"
altair = ">=4.2"
mendeleev = ">=0.10"
omegaconf = ">=2.2"
tqdm = ">=4.64"
ipykernel = ">=6.15"
click = ">=8.1"
jsonargparse = { version = ">=4.12.0", extras = ["signatures"] }

[build-system]
requires = ["poetry_core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

#TODO: add interfaces to the VQGAE
[tool.poetry.scripts]
vqgae_train = "vqgae.pipelines.train:training_interface"
vqgae_encode = "vqgae.pipelines.encode:encoding_interface"
vqgae_decode = "vqgae.pipelines.encode:decoding_interface"
vqgae_default_config = "vqgae.utils:vqgae_default_config"
