[tool.poetry]
name = "vqgae"
version = "0.1.2"
description = "Official implementation of VQGAE architecture"
authors = ["Laboratoire de Chemoinformatique <tagirshin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "VQGAE", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
cgrtools = ">=4.1.34"
py-mini-racer = ">=0.6"
mendeleev = ">=0.10"
omegaconf = ">=2.2"
tqdm = ">=4.64"
click = ">=8.1"
jsonargparse = { version = ">=4.12.0", extras = ["signatures"] }
adabelief-pytorch = "0.2.1"
pygad = ">=3.0"
pony = ">=0.7"

[build-system]
requires = ["poetry_core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vqgae_train = "VQGAE.cli:training_interface"
vqgae_encode = "VQGAE.cli:encoding_interface"
vqgae_decode = "VQGAE.cli:decoding_interface"
onn_train = "VQGAE.cli:ordering_interface"
vqgae_default_config = "VQGAE.utils:vqgae_default_config"
